# mcp-docx-comments

./: .gitignore  README.md  pyproject.toml
src/docx_comments_mcp/: __init__.py
