[project]
name = "mcp-docx-comments"
version = "0.1.0"
description = "MCP Server - 将 Word 文档中的批注内联到正文中"
requires-python = ">=3.10"
dependencies = [
    "mcp",
    "python-docx",
    "lxml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docx_comments_mcp"]

[project.scripts]
mcp-docx-comments = "docx_comments_mcp:main"
